--- a/frontend/index.html
+++ b/frontend/index.html
@@ -312,22 +312,31 @@
             </div>
           </div>
         </div>
-        <div id="pillarDetailsOverlay" class="details-overlay" role="presentation" hidden aria-hidden="true">
-          <div class="details-panel" role="dialog" aria-modal="true" aria-labelledby="detailsPanelTitle" aria-describedby="detailsPanelSummary" tabindex="-1">
-            <div class="details-panel__header">
-              <div>
-                <p class="details-panel__eyebrow">Category Details</p>
-                <h3 id="detailsPanelTitle">Category</h3>
-              </div>
-              <button type="button" class="details-panel__close" id="detailsPanelCloseBtn" aria-label="Close details panel">&times;</button>
-            </div>
-            <p id="detailsPanelSummary" class="details-panel__summary"></p>
-            <div class="details-panel__body" id="detailsPanelBody"></div>
-          </div>
-        </div>
       </div>
       </section>
     </main>
+
+    <div id="details-backdrop" class="details-backdrop hidden" aria-hidden="true"></div>
+    <aside
+      id="details-panel"
+      class="details-panel hidden"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="detailsPanelTitle"
+      aria-describedby="detailsPanelSummary"
+      aria-hidden="true"
+      tabindex="-1"
+    >
+      <div class="details-panel__header">
+        <div>
+          <p class="details-panel__eyebrow">Category Details</p>
+          <h3 id="detailsPanelTitle">Category</h3>
+        </div>
+        <button id="detailsPanelCloseBtn" class="details-panel__close" type="button" aria-label="Close details panel">&times;</button>
+      </div>
+      <p id="detailsPanelSummary" class="details-panel__summary"></p>
+      <div class="details-panel__body" id="detailsPanelBody"></div>
+    </aside>
 
     <div class="loading-overlay" id="loadingOverlay" aria-live="polite" aria-hidden="true">
       <div class="spinner" role="status"></div>
