Card Format Fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -201,7 +201,7 @@
             </div>
           </article>
 
-          <section class="results-card collapsible-card hover-card" data-column="left">
+          <section class="results-card collapsible-card hover-card breakdown-section" data-column="left">
             <button class="collapsible-toggle" type="button" data-collapse-target="seoPillarsPanel" aria-expanded="true">
               <div class="collapsible-copy">
                 <p class="pillar-group__title label-with-icon">
@@ -222,7 +222,7 @@
             </div>
           </section>
 
-          <section class="results-card collapsible-card hover-card" data-column="right">
+          <section class="results-card collapsible-card hover-card breakdown-section" data-column="right">
             <button class="collapsible-toggle" type="button" data-collapse-target="geoPillarsPanel" aria-expanded="true">
               <div class="collapsible-copy">
                 <p class="pillar-group__title label-with-icon">
