Improve Card Spacing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -213,7 +213,7 @@
               <span class="collapsible-caret" aria-hidden="true"></span>
             </button>
             <div class="collapsible-panel collapsible-panel--open" id="seoPillarsPanel">
-              <div class="pillar-grid" id="seoPillars"></div>
+              <div class="card-grid pillar-grid" id="seoPillars"></div>
               <div class="pillar-skeleton" id="seoPillarsSkeleton">
                 <div class="skeleton skeleton-card"></div>
                 <div class="skeleton skeleton-card"></div>
@@ -234,7 +234,7 @@
               <span class="collapsible-caret" aria-hidden="true"></span>
             </button>
             <div class="collapsible-panel collapsible-panel--open" id="geoPillarsPanel">
-              <div class="pillar-grid" id="geoPillars"></div>
+              <div class="card-grid pillar-grid" id="geoPillars"></div>
               <div class="pillar-skeleton" id="geoPillarsSkeleton">
                 <div class="skeleton skeleton-card"></div>
                 <div class="skeleton skeleton-card"></div>
